--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/deep_purple_500</color>
+    <color name="colorPrimaryDark">@color/deep_purple_500_dark</color>
+    <color name="colorAccent">@color/orange_300</color>
+
+    <color name="deep_purple_500">#673ab7</color>
+    <color name="deep_purple_500_dark">#320b86</color>
+    <color name="deep_purple_500_light">#9a67ea</color>
+    <color name="orange_300">#ffb74d</color>
 </resources>
