--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/nav_top"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_news"
             android:icon="@drawable/ic_settings_black_24dp"
@@ -25,7 +27,7 @@
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/nav_settings_title" />
     </group>
-    <group>
+    <group android:id="@+id/nav_bottom">
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_info_black_24dp"
