--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -45,17 +45,16 @@
     <EditText
         android:id="@+id/edit_post_description"
         style="?titleTextAppearance"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:gravity="top|left"
+        android:background="@android:color/transparent"
+        android:gravity="top|start"
         android:hint="Description, deliver a message for the people"
         android:inputType="text"
-        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/edit_post_title"
         app:layout_constraintStart_toStartOf="@+id/edit_post_title"
         app:layout_constraintTop_toBottomOf="@+id/edit_post_title" />
 
