--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.budismo.nikkyojers.ui.AddPostActivityFragment"
+    tools:context="br.com.budismo.nikkyojers.ui.addpost.AddPostActivityFragment"
     tools:showIn="@layout/activity_add_post">
 
     <EditText
