--- a/app/src/main/res/menu/menu_add_post.xml
+++ b/app/src/main/res/menu/menu_add_post.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="br.com.budismo.nikkyojers.ui.AddPostActivity">
+    tools:context="br.com.budismo.nikkyojers.ui.addpost.AddPostActivity">
     <item
         android:id="@+id/action_publish"
         android:orderInCategory="100"
