--- a/app/src/main/res/layout/content_add_event.xml
+++ b/app/src/main/res/layout/content_add_event.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="br.com.budismo.nikkyojers.ui.feed.AddPostActivityFragment"
+    android:name="br.com.budismo.nikkyojers.ui.calendar.AddEventActivityFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:layout="@layout/fragment_add_post" />
+    tools:layout="@layout/fragment_add_event" />
