--- a/app/src/main/res/menu/menu_add_event.xml
+++ b/app/src/main/res/menu/menu_add_event.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="br.com.budismo.nikkyojers.ui.feed.AddPostActivity">
+    tools:context="br.com.budismo.nikkyojers.ui.calendar.AddEventActivity">
     <item
-        android:id="@+id/action_publish"
+        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_publish"
-        app:showAsAction="always" />
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
 </menu>
