--- a/app/src/main/res/menu/menu_add_event.xml
+++ b/app/src/main/res/menu/menu_add_event.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.budismo.nikkyojers.ui.calendar.AddEventActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_publish"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="@string/action_create"
+        app:showAsAction="always" />
 </menu>
