--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:hint="Post title, subdescription title"
+        android:hint="@string/hint_post_title"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/iv_profile_image"
@@ -51,7 +51,7 @@
         android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
         android:gravity="top|start"
-        android:hint="Description, deliver a message for the people"
+        android:hint="@string/hint_post_description"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/edit_post_title"
