--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -9,7 +9,6 @@
 
     <EditText
         android:id="@+id/edit_post_title"
-        style="?titleTextAppearance"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -44,18 +43,19 @@
 
     <EditText
         android:id="@+id/edit_post_description"
-        style="?titleTextAppearance"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
         android:gravity="top|start"
         android:hint="@string/hint_post_description"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/edit_post_title"
-        app:layout_constraintStart_toStartOf="@+id/edit_post_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_post_title" />
 
 </android.support.constraint.ConstraintLayout>
