--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:textSize="18sp"
+        android:layout_marginTop="4dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_event_date"
         app:layout_constraintTop_toTopOf="@+id/tv_event_date"
@@ -47,6 +49,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
@@ -68,6 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/iv_time"
         app:layout_constraintTop_toTopOf="@+id/iv_time"
         tools:text="Fri, Jan 31 at 1:00pm" />
@@ -77,6 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@+id/tv_event_start_date"
         app:layout_constraintTop_toBottomOf="@+id/tv_event_start_date"
         tools:text="Sun, Feb 02 at 05:00pm" />
@@ -98,6 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/iv_location"
         app:layout_constraintTop_toTopOf="@+id/iv_location"
         tools:text="Catedral Nikkyoji" />
@@ -107,6 +113,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="109dp" />
+        app:layout_constraintGuide_begin="124dp" />
 
 </android.support.constraint.ConstraintLayout>
