--- a/app/src/main/res/layout/fragment_calendar_page.xml
+++ b/app/src/main/res/layout/fragment_calendar_page.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/constraintLayout"
